# go-llama

./: .gitignore  Makefile  README.md  error.go  go.mod  go.sum
.github/workflows/: cli.yml  docker.yaml
cmd/go-llama/: completion.go  embed.go  main.go  server.go  tokenizer.go  version.go
cmd/gollama/: chat.go  completion.go  gpuinfo.go  main.go  model.go  server.go  tokenizer.go  version.go
docs/: grammar-bindings.md
etc/: Dockerfile.cuda  Dockerfile.debian  Dockerfile.vulkan
pkg/llamacpp/: chat.go  chat_test.go  completion.go  completion_test.go  embed.go  embed_test.go  llama.go  llama_test.go  model.go  model_test.go  opt.go  pull_model_test.go  reasoning.go  reasoning_test.go  task.go  task_test.go  tokenizer.go  tokenizer_test.go
pkg/llamacpp/httpclient/: chat.go  client.go  completion.go  doc.go  embed.go  model.go  opts.go  tokenizer.go
pkg/llamacpp/httphandler/: chat.go  chat_test.go  completion.go  completion_test.go  embed.go  embed_test.go  httphandler.go  model.go  model_test.go  tokenizer.go  tokenizer_test.go
pkg/llamacpp/schema/: chat.go  completion.go  embed.go  event.go  gpu.go  load.go  load_client.go  load_server.go  model.go  model_gguf.go  otel.go  schema.go  tokenizer.go
pkg/llamacpp/store/: client.go  client_test.go  store.go  store_test.go  url_parser_test.go
sys/gguf/: error.go  gguf.go  gguf_test.go
sys/llamacpp/: CMakeLists.txt  batch.cpp  batch.go  batch.h  batch_test.go  batchembedding_test.go  chat.cpp  chat.go  chat_template.cpp  chat_template.go  chat_template.h  chat_template_test.go  chattemplate.cpp  completion.cpp  completion.go  completion.h  completion_test.go  concurrency_test.go  context.cpp  context.go  context.h  context_kvcache_test.go  context_test.go  decode.cpp  decode.go  decode.h  decode_prefixcache_test.go  decode_test.go  embedding.cpp  embedding.go  embedding.h  embedding_batch_test.go  embedding_test.go  error.cpp  error.go  error.h  generate.go  generate_cuda.go  generate_vulkan.go  gpu.cpp  (+38 more)
testdata/: .gitignore  README.md
